# tmdiscord

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yml  pyproject.toml  setup.cfg
config/: dev.yml  local.yml  prod.yml
scripts/: format  install  lint  test  typecheck
test/: test_bot.py
tmdiscord/: __main__.py  bot.py  cli.py  config.py  logging.py
