[tool.poetry]
name = "tmdiscord"
version = "0.1.0"
description = "Discord bot for Terraforming Mars Open-Source"
authors = ["Kai Yang <kai.yang412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
