[tool.poetry]
name = "tmdiscord"
version = "0.1.0"
description = "Discord bot for Terraforming Mars Open-Source"
authors = ["Kai Yang <kai.yang412@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsonargparse = {extras = ["signatures"], version = "^4.21.2"}
requests = "^2.31.0"
google-cloud-logging = ">=3.0.0"
loguru = "^0.7.0"
rich-argparse = "^1.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
pytest = "^7.3.2"
pre-commit = "^3.3.3"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
disable_error_code = ["method-assign", "no-any-return", "no-untyped-call"]
strict = true

[[tool.mypy.overrides]]
module = "test.*"
disable_error_code = "no-untyped-def"
